# svn-svn.code.sf.net-p-srpmix-code-

./: Makefile.am  configure.ac
diix/: .profile.es  configure.ac
diix/misc/specs/: Makefile.am  diix.spec.in
diix/src/: Makefile.am  diix
diix/src/cmds/: Makefile.am  diix
diix/trunk/: diix
dive/dwarf/shell/: Makefile  Makefile.am  autogen.sh  configure.ac  dwarfish.c  es-lang-c-stdc99.c  es-lang-c-stdc99.h
font-lock/: ChangeLog  Makefile.am  TODO  configure.ac  configure.in
font-lock/misc/: Makefile.am
font-lock/misc/specs/: Makefile.am  font-lock.spec.in
font-lock/profile/: README  master-corei7-xdisp.c.shtml  profile.el
font-lock/src/: Makefile.am
font-lock/src/cmds/: Makefile.am  _font-lock  flclient  flserver  font-lock  shtml->xhtml
font-lock/src/elisp/: Makefile.am  flserver-boot.el  flserver-decl.el  flserver-main.el  flserver.el
font-lock/src/gauche/: Makefile.am  flclient.scm  flrange.scm
lcopy/: ChangeLog  TODO  autogen.sh  configure.ac
lcopy/misc/specs/: lcopy.spec.in  make-sub-spec
lcopy/src/: Makefile.am  lcopy-checkout  lcopy-envelop  lcopy-genconf  lcopy-ping  lcopy-update  liblcopy.sh.in  liblcopy_backends.sh.in
lcopy/src/backends/: Makefile.am  bzr  cvs  darcs  debwatch  dwatch  git  hg  mtn  rsync  svn  uupdate  wgetx
lcopy/src/conf.d/: DONE  Makefile.am  biwascheme,trunk.lcopy  corosync,trunk.lcopy  glib2,trunk.lcopy  gtk2,trunk.lcopy  mew,trunk.lcopy  miniaspace,trunk.lcopy  resource-agents,trunk.lcopy  spice,qxl.lcopy  spice,trunk.lcopy  spice,vdesktop.lcopy  spice,vdi_agent.lcopy  spice,vdi_port.lcopy  spice,vdi_slirp.lcopy  trunk,cluster.lcopy  update.sh  wfo,trunk.lcopy
lcopy/src/hook.d/: 50srpmix-plugin  Makefile.am
lcopy/trunk/: ChangeLog  Makefile.am  configure.ac
lcopy/trunk/doc/: Makefile.am  lcopy-rebirth.1  lcopy-refresh.1
lcopy/trunk/etc/: Makefile.am  default.lcopy-refresh  lcopy-refresh.cron  sources.lcopy-refresh
lcopy/trunk/specs/: ConsoleKit--trunk-lcopy-link.spec  ConsoleKit--trunk-lcopy-subscription.spec  ConsoleKit-lcopy-link.spec  ConsoleKit-lcopy-subscription.spec  PolicyKit--trunk-lcopy-link.spec  PolicyKit--trunk-lcopy-subscription.spec  PolicyKit-lcopy-link.spec  PolicyKit-lcopy-subscription.spec  anaconda--trunk-lcopy-link.spec  anaconda--trunk-lcopy-subscription.spec  apel--trunk-lcopy-link.spec  apel--trunk-lcopy-subscription.spec  autoconf--trunk-lcopy-link.spec  autoconf--trunk-lcopy-subscription.spec  autoconf-archive--trunk-lcopy-link.spec  autoconf-archive--trunk-lcopy-subscription.spec  automake--trunk-lcopy-link.spec  automake--trunk-lcopy-subscription.spec  binutils--ld-lcopy-link.spec  binutils--ld-lcopy-subscription.spec  binutils--trunk-lcopy-link.spec  binutils--trunk-lcopy-subscription.spec  biwascheme--trunk-lcopy-link.spec  biwascheme--trunk-lcopy-subscription.spec  cairo--trunk-lcopy-link.spec  cairo--trunk-lcopy-subscription.spec  cairo-lcopy-link.spec  cairo-lcopy-subscription.spec  corosync--trunk-lcopy-link.spec  corosync--trunk-lcopy-subscription.spec  corosync-lcopy-link.spec  corosync-lcopy-subscription.spec  cvs--trunk-lcopy-link.spec  cvs--trunk-lcopy-subscription.spec  diff-specs.sh  emacs--trunk-lcopy-link.spec  emacs--trunk-lcopy-subscription.spec  emacs-w3m--trunk-lcopy-link.spec  emacs-w3m--trunk-lcopy-subscription.spec  gauche--trunk-lcopy-link.spec  (+143 more)
lcopy/trunk/src/: 10lcopy-ctags  10lcopy-etags  Makefile.am  lcopy  lcopy-ftp.scm  lcopy-genspec  lcopy-rebirth  lcopy-refresh  lcopy-sandbox  liblcopy.sh  liblcopy.sh.in
outlang/: configure.ac
outlang/src/: Makefile.am
perg/: ChangeLog  Makefile.am  configure.ac  dperg  mperg  mperg-generate-basename-package-hash.scm  perg  perg.el
perg/misc/: Makefile.am
perg/src/: Makefile.am
prelcopy/: ChangeLog  HOW-TO-RUN.txt  autogen.sh  configure.ac
prelcopy/src/: Makefile.am  prelcopy  prelcopy.scm
prelcopy/tests/: Makefile.am  svnweb+jbossas.sh  svnweb+jbossas.txt
sbuild/: ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac
sbuild/src/: ChangeLog  Makefile.am  create-comps.scm  gc-repo-pkg-version.scm  gc-repo-srpmix-version.scm  gc-repo.scm  sbuild  sbuild-comps  sbuild-createrepo.mk  sbuild-repogc.scm  sbuild-srpm-list.sh  sbuild-vpath-list.sh  sbuild.cf  sbuild.mk  srpmix.mk  typical
sdoc/: autogen.sh  configure.ac
sdoc/doc/: Makefile.am  sdoc.texi
sop/: ChangeLog  README  autogen.sh  configure.ac
sop/src/: Makefile.am  dist-map-lcopy  dist-map-srpms  mirror-alias  mirror-ftp  mirror-koji  mirror-lcopy  mirror-lcopy-sys  mirror-lcopy-user  mirror-nop  mirror-prelcopy  mirror-prelcopy-sys  mirror-user  mirror-wget  mirror-yum  sop-garbages  sop-gc  sop-gc2  sop-mirror  sop-mummify  sop-prepare  sop-repofile  sop-update  sop.cf
src/: Makefile.am  build-sources.sh  libsrpmix.sh  srpmix-gonzui  srpmix-meta-hardlink  srpmix-vanilla
srpmix/src/: Makefile.am  srpmix-build  srpmix-db  srpmix-dir-pkg  srpmix-envelop  srpmix-ix  srpmix-mock  srpmix-nvr-attach  srpmix-package-attach  srpmix-plugin  srpmix-rootdir-attach  srpmix-weakview-alias  srpmix-weakview-channel  srpmix-weakview-dist  srpmix-weakview-dist-attach  srpmix-weakview-packages  srpmix-wrap
srpmix/trunk/: ChangeLog  JAPANESE.todo  Makefile.am  autogen.sh  configure.ac  run-configure.sh
sstat/: ChangeLog  configure.ac  sstat-post.scm  sstat-pre.scm  sstat.stp
sstat/src/: Makefile.am  sstat  sstat-post  sstat-post.cron  sstat-post.scm  sstat-pre  sstat-pre.scm  sstat.cf  sstat.stp
syntax/: Kconfig.shtml  Makefile.am  autogen.sh  configure.ac  htmlprag-0-16.scm  syntax-batch.sh  syntax-batch.vim  yogofy.scm
syntax/src/: Makefile.am
webapp-%PKGNAME%/: configure.ac
webapp0/: .profile.es  Makefile.am  configure.ac
webapp0/src/: Makefile.am
webperg/: TODO  autogen.sh  configure.ac
yogomacs/: .profile.es  Makefile.am  TEST  TODO  configure.ac  prepare.sh  y2sh.html  ysh.html
yogomacs/misc/: Makefile.am
yogomacs/src/: Makefile.am
yogomacs/tests/: Makefile.am  ebuf.scm  enum.scm  lcopy.scm  range.scm  test.scm
yogomacs/trunk/: point-nodes.js  refacto.patch  test-dired.html  test-file.html  yogomacs.scm
(+1063 files in other folders)
