dist_bin_SCRIPTS =           \
	srpmix               \
        libsrpmix.sh         \
	\
        srpmix-etags         \
        srpmix-ctags         \
        srpmix-cscope        \
        srpmix-gonzui        \
	\
	srpmix-vanilla       \
	\
	srpmix-spider        \
	\
	srpmix-meta-hardlink \
	\
	build-sources.sh     \
	\
        $(NULL)
