SUBDIRS  = .
SUBDIRS += backends
SUBDIRS += conf.d

bin_SCRIPTS=					\
	liblcopy.sh				\
	liblcopy_backends.sh			\
						\
	$(NULL)
CLEANFILES = $(bin_SCRIPTS)

dist_bin_SCRIPTS =     \
	\
        lcopy-genconf  \
        lcopy-checkout \
        lcopy-update   \
        lcopy-envelop  \
        lcopy-rebirth  \
	lcopy-ping     \
	\
        $(NULL)

