m4_define([pkg_name],    [lcopy])
m4_define([pkg_version], [0.0.12])



AC_INIT(pkg_name, pkg_version)
AC_CONFIG_AUX_DIR(misc/ac-aux)
AM_INIT_AUTOMAKE([no-dist-gzip dist-bzip2])



AC_OUTPUT([
           Makefile
           misc/Makefile
           misc/ac-aux/Makefile
           misc/m4/Makefile
           misc/makefiles/Makefile
           misc/specs/Makefile
           misc/specs/lcopy.spec
           src/Makefile
           src/liblcopy.sh
           etc/Makefile
           doc/Makefile
          ])

