sbuildconfdir=$(sysconfdir)/sbuild
dist_sbuildconf_DATA = sbuild.cf

dist_bin_SCRIPTS=    \
	sbuild       \
	sbuild-comps \
	\
	$(NULL)

dist_pkgdata_SCRIPTS=  \
	sbuild-createrepo.mk \
	sbuild.mk            \
        sbuild-srpm-list.sh  \
        sbuild-vpath-list.sh \
	gc-repo.scm          \
	create-comps.scm     \
	\
	$(NULL)
