SUBDIRS = flserver
dist_lisp_LISP = \
	\
	flserver-boot.el \
	flserver-decl.el \
	flserver-main.el \
	\
	$(NULL)


flserverdir = $(lispdir)/flserver
dist_flserver_DATA = flserver/.nosearch
dist_flserver_LISP = \
	\
	flserver/cssize.el   \
	flserver/xhtmlize.el \
	flserver/log.el  \
	\
	$(NULL)

pluginsdir = $(lispdir)/flserver/plugins
modesdir = $(lispdir)/flserver/modes
