SUBDIRS = flserver
dist_lisp_LISP = \
	\
	flserver-boot.el \
	flserver-decl.el \
	flserver-main.el \
	\
	$(NULL)


flserverdir = $(lispdir)/flserver
dist_flserver_DATA = flserver/.nosearch
dist_flserver_LISP = \
	\
	flserver/cssize.el   \
	flserver/xhtmlize.el \
	flserver/log.el  \
	\
	$(NULL)

pluginsdir = $(lispdir)/flserver/plugins
dist_plugins_LISP = \
	\
	flserver/plugins/xhtmlize+linum-decl.el \
	flserver/plugins/xhtmlize+linum-main.el \
	\
	flserver/plugins/xhtmlize+linum+fringe-decl.el
	flserver/plugins/xhtmlize+linum+fringe-main.el
	\
	$(NULL)

modesdir = $(lispdir)/flserver/modes
