confddir = $(sysconfdir)/lcopy/conf.d
dist_confd_DATA = \
	\
	ConsoleKit,trunk.lcopy \
	anaconda,trunk.lcopy \
	autoconf,trunk.lcopy \
	automake,trunk.lcopy \
	binutils,trunk.lcopy \
	biwascheme,trunk.lcopy \
	cairo,trunk.lcopy \
	corosync,trunk.lcopy \
	ddskk,trunk.lcopy \
	emacs,trunk.lcopy \
	gauche,trunk.lcopy \
	gauche-mode,trunk.lcopy \
	glib2,trunk.lcopy \
	glibc,trunk.lcopy \
	gnash,trunk.lcopy \
	goocanvas,trunk.lcopy \
	gstreamer,trunk.lcopy \
	gtk2,trunk.lcopy \
	hal,trunk.lcopy \
	kernel,rt.lcopy \
	kernel,trunk.lcopy \
	kernel,xen-3_2.lcopy \
	lcopy,trunk.lcopy \
	libvirt,trunk.lcopy \
	man-pages,trunk.lcopy \
	miniascape,trunk.lcopy \
	perg,trunk.lcopy \
	qt-jambi,trunk.lcopy \
	sbuild,trunk.lcopy \
	sop,trunk.lcopy \
	sos,trunk.lcopy \
	srpmix,trunk.lcopy \
	stitch,trunk.lcopy \
	twig,trunk.lcopy \
	util-linux-ng,trunk.lcopy \
	wireshark,trunk.lcopy \
	with-log,trunk.lcopy \
	xtrace,trunk.lcopy \
	\
	$(NULL)
